[package]
name = "sen5x"
version = "0.2.0"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
documentation = "https://docs.rs/sen5x"
repository = "https://github.com/hauju/sen5x-rs.git"
license = "MIT OR Apache-2.0"
description = "Rust driver for the Sensirion SEN5x series. All-in-one sensor solution platform for the accurate measurement of various environmental parameters, such as particulate matter, volatile organic compounds (VOCs), oxidizing gases, such as nitrogen oxide compounds (NOx), as well as humidity & temperature"
keywords = ["sen5x", "sensirion", "driver", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[features]
embedded-hal-async = ["dep:embedded-hal-async", "sensirion-i2c/embedded-hal-async"]
defmt = ["dep:defmt"]
thiserror = ["dep:thiserror", "std"]
std = []
default = []

[dependencies]
sensirion-i2c = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

defmt = { version = "0.3", optional = true }
thiserror = { version = "2.0.12", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
linux-embedded-hal = "0.4.0"
